Fix avatars on smaller screens

--- a/theme/topic.css
+++ b/theme/topic.css
@@ -5,7 +5,7 @@
     float: left;
 }
 .avatar-container {
-    width: 30vh;
+    max-width: 30vh;
 }
 .avatar {
     border-radius: 100%;
